# dsl_2023

./: .gitignore  README.md  data_exploration.ipynb  ot_solver_class.ipynb
ground_truth_generation/: CMakeLists.txt  data_generation.cpp  data_generation.ipynb  droplet_simulation.cpp  process_simulation_data.py  visualize_simulation.py
ground_truth_generation/data/: loc_data_L0_A0_R1_2000_5.csv  loc_data_L0_A0_R1_D0_M0_1500_5.csv  loc_data_L0_A0_R1_D0_M0_150_5.csv  loc_data_L0_A0_R1_D1_M0_1500_5.csv  loc_data_L0_A1_R1_D1_M1_5000_3.csv  loc_data_L1_A0_R0_3300_4.csv  loc_data_L1_A0_R0_D1_M1_10000_2.csv  loc_data_L1_A0_R1_D1_M0_500_10.csv  loc_data_L1_A0_R1_D1_M1_5000_3.csv  location_data_1000_10_L1_A0_R0.csv  location_data_1000_L1_A0_R0.csv  location_data_1500_7_L0_A0_R0.csv  location_data_1500_L0_A0_R0.csv  meta_data_1000_10_L1_A0_R0.csv  meta_data_1000_L1_A0_R0.csv  meta_data_1500_7_L0_A0_R0.csv  meta_data_1500_L0_A0_R0.csv  meta_data_L0_A0_R1_2000_5.csv  meta_data_L0_A0_R1_D0_M0_1500_5.csv  meta_data_L0_A0_R1_D0_M0_150_5.csv  meta_data_L0_A0_R1_D1_M0_1500_5.csv  meta_data_L0_A1_R1_D1_M1_5000_3.csv  meta_data_L1_A0_R0_3300_4.csv  meta_data_L1_A0_R0_D1_M1_10000_2.csv  meta_data_L1_A0_R1_D1_M0_500_10.csv  meta_data_L1_A0_R1_D1_M1_5000_3.csv
ground_truth_generation/ot_data/: droplet_positions.csv
ground_truth_generation/ot_data/L1_A0_R1_D1_M1_5000_3/: droplet_positions.csv
