# FILEPATH: /home/mike/Masters_DS/dsl_2023_all/dsl_2023/ground_truth_generation/CMakeLists.txt

cmake_minimum_required(VERSION 3.10)

project(ground_truth_generation)

# Add the executable
add_executable(data_generation data_generation.cpp)

# # Link any necessary libraries
# target_link_libraries(data_generation ${REQUIRED_LIBRARIES})

# # Set any necessary compile options
# target_compile_options(data_generation PRIVATE ${REQUIRED_COMPILE_OPTIONS})
